desktop-themes/BlueMenta/gtk-3.0/gtk-widgets.css
/* ... */
/* Top button (vertical) */
.linked.vertical > combobox:first-child > button.combo:first-child,
.linked.vertical > combobox:first-child > button.combo:focus:first-child,
.linked.vertical > combobox:first-child > button.combo:disabled:first-child,
.linked.vertical > combobox:first-child > button.combo:focus:active:first-child,
.linked.vertical > combobox:first-child > button.combo:checked:first-child,
.linked.vertical > combobox:first-child > button.combo:focus:checked:first-child,
.linked.vertical > combobox:first-child > button.combo:hover:first-child:first-child,
.linked.vertical > combobox:first-child > button.combo:hover:active:first-child,
.linked.vertical > combobox:first-child > button.combo:checked:hover:first-child,
.linked.vertical entry:first-child,
.linked.vertical button:first-child,
.linked.vertical button:hover:active:first-child,
.linked.vertical button:checked:first-child,
.linked.vertical button:checked:hover:first-child,
.linked.vertical button:disabled:first-child,
.linked.vertical > GtkComboBox:first-child > .button:last-child,
.linked.vertical > GtkComboBox:first-child > .button:focus:last-child,
.linked.vertical > GtkComboBox:first-child > .button:disabled:last-child,
.linked.vertical > GtkComboBox:first-child > .button:active:last-child,
.linked.vertical > GtkComboBox:first-child > .button:focus:active:last-child,
.linked.vertical > GtkComboBox:first-child > .button:checked:first-child:last-child,
.linked.vertical > GtkComboBox:first-child > .button:focus:checked:first-child:last-child,
.linked.vertical > GtkComboBox:first-child > .button:hover:first-child:last-child,
.linked.vertical > GtkComboBox:first-child > .button:active:hover:last-child,
.linked.vertical > GtkComboBox:first-child > .button:checked:hover:last-child,
.linked.vertical .entry:first-child,
.linked.vertical .button:first-child,
.linked.vertical .button:active:first-child,
.linked.vertical .button:active:hover:first-child,
.linked.vertical .button:checked:first-child,
.linked.vertical .button:checked:hover:first-child,
.linked.vertical .button:disabled:first-child {
	border-bottom-width: 0px;
	border-top-width: 1px;
	border-right-width: 1px;
	border-left-width: 1px;
	border-image-width: 3px 4px 0 4px;
	border-radius: 4px 4px 0 0;
}

/* Bottom button (vertical) */
.linked.vertical > combobox:last-child > button.combo,
.linked.vertical > combobox:last-child > button.combo:last-child,
.linked.vertical > combobox:last-child > button.combo:disabled:last-child,
.linked.vertical > combobox:last-child > button.combo:focus:active:last-child,
.linked.vertical > combobox:last-child > button.combo:checked:last-child,
.linked.vertical > combobox:last-child > button.combo:focus:checked:last-child,
.linked.vertical > combobox:last-child > button.combo:hover:last-child,
.linked.vertical > combobox:last-child > button.combo:hover:active:last-child,
.linked.vertical > combobox:last-child > button.combo:checked:hover:last-child,
.linked.vertical entry:last-child,
.linked.vertical button:last-child,
.linked.vertical button:hover:active:last-child,
.linked.vertical button:checked:last-child,
.linked.vertical button:checked:hover:last-child,
.linked.vertical button:disabled:last-child,
.linked.vertical > GtkComboBox:last-child > .button,
.linked.vertical > GtkComboBox:last-child > .button:last-child,
.linked.vertical > GtkComboBox:last-child > .button:disabled:last-child,
.linked.vertical > GtkComboBox:last-child > .button:active:last-child,
.linked.vertical > GtkComboBox:last-child > .button:focus:active:last-child,
.linked.vertical > GtkComboBox:last-child > .button:checked:last-child,
.linked.vertical > GtkComboBox:last-child > .button:focus:checked:last-child,
.linked.vertical > GtkComboBox:last-child > .button:hover:last-child,
.linked.vertical > GtkComboBox:last-child > .button:active:hover:last-child,
.linked.vertical > GtkComboBox:last-child > .button:checked:hover:last-child,
.linked.vertical .entry:last-child,
.linked.vertical .button:last-child,
.linked.vertical .button:active:last-child,
.linked.vertical .button:active:hover:last-child,
.linked.vertical .button:checked:last-child,
.linked.vertical .button:checked:hover:last-child,
.linked.vertical .button:disabled:last-child {
	border-top-width: 0px;
	border-bottom-width: 1px;
	border-right-width: 1px;
	border-left-width: 1px;
	border-image-width: 0 4px 4px 4px;
	border-radius: 0 0 4px 4px;
}
/* ... */

